docs/api/qiskit/0.19/qiskit.circuit.library.CXGate.mdx
---
title: CXGate (v0.19)
description: API reference for qiskit.circuit.library.CXGate in qiskit v0.19
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.circuit.library.CXGate
---

# CXGate

<Class id="qiskit.circuit.library.CXGate" isDedicatedPage={true} github="https://github.com/qiskit/qiskit/tree/stable/0.14/qiskit/circuit/library/standard_gates/x.py" signature="CXGate(ctrl_state=None, label=None)" modifiers="class">
  Controlled-X gate.

  **Circuit symbol:**

  ```python
  q_0: ──■──
       ┌─┴─┐
  q_1: ┤ X ├
       └───┘
  ```

  **Matrix representation:**

$$
\begin{split}CX\ q_0, q_1 =
I \otimes |0\rangle\langle0| + X \otimes |1\rangle\langle1| =
\begin{pmatrix}
1 & 0 & 0 & 0 \\
0 & 0 & 0 & 1 \\
0 & 0 & 1 & 0 \\
0 & 1 & 0 & 0
\end{pmatrix}\end{split}
$$

  <Admonition title="Note" type="note">
    In Qiskit’s convention, higher qubit indices are more significant (little endian convention). In many textbooks, controlled gates are presented with the assumption of more significant qubits as control, which in our case would be q\_1. Thus a textbook matrix for this gate will be:

    ```python
         ┌───┐
    q_0: ┤ X ├
         └─┬─┘
    q_1: ──■──
    ```

$$
\begin{split}CX\ q_1, q_0 =
|0 \rangle\langle 0| \otimes I + |1 \rangle\langle 1| \otimes X =
\begin{pmatrix}
1 & 0 & 0 & 0 \\
0 & 1 & 0 & 0 \\
0 & 0 & 0 & 1 \\
0 & 0 & 1 & 0
\end{pmatrix}\end{split}
$$
  </Admonition>

  In the computational basis, this gate flips the target qubit if the control qubit is in the $|1\rangle$ state. In this sense it is similar to a classical XOR gate.

$$
`|a, b\rangle \rightarrow |a, a \oplus b\rangle`
$$

  Create new CX gate.

  ## Attributes

  <span id="cxgate-ctrl-state" />

  ### ctrl\_state

  <Attribute id="qiskit.circuit.library.CXGate.ctrl_state" attributeTypeHint="int">
    Return the control state of the gate as a decimal integer.

    **Return type**

    `int`
  </Attribute>

  <span id="cxgate-decompositions" />

  ### decompositions

  <Attribute id="qiskit.circuit.library.CXGate.decompositions">
    Get the decompositions of the instruction from the SessionEquivalenceLibrary.
  </Attribute>

  <span id="cxgate-definition" />

  ### definition

  <Attribute id="qiskit.circuit.library.CXGate.definition" attributeTypeHint="List">
    Return definition in terms of other basic gates. If the gate has open controls, as determined from self.ctrl\_state, the returned definition is conjugated with X without changing the internal \_definition.

    **Return type**

    `List`
  </Attribute>

  <span id="cxgate-label" />

  ### label

  <Attribute id="qiskit.circuit.library.CXGate.label" attributeTypeHint="str">
    Return gate label

    **Return type**

    `str`
  </Attribute>

  <span id="cxgate-params" />

  ### params

  <Attribute id="qiskit.circuit.library.CXGate.params">
    return instruction params.
  </Attribute>

  ## Methods

  <span id="cxgate-add-decomposition" />

  ### add\_decomposition

  <Function id="qiskit.circuit.library.CXGate.add_decomposition" signature="CXGate.add_decomposition(decomposition)">
    Add a decomposition of the instruction to the SessionEquivalenceLibrary.
  </Function>

  <span id="cxgate-assemble" />

  ### assemble

  <Function id="qiskit.circuit.library.CXGate.assemble" signature="CXGate.assemble()">
    Assemble a QasmQobjInstruction

    **Return type**

    [`Instruction`](qiskit.circuit.Instruction "qiskit.circuit.instruction.Instruction")
  </Function>

  <span id="cxgate-broadcast-arguments" />

  ### broadcast\_arguments

  <Function id="qiskit.circuit.library.CXGate.broadcast_arguments" signature="CXGate.broadcast_arguments(qargs, cargs)">
    Validation and handling of the arguments and its relationship.

    For example, `cx([q[0],q[1]], q[2])` means `cx(q[0], q[2]); cx(q[1], q[2])`. This method yields the arguments in the right grouping. In the given example:

    ```python
    in: [[q[0],q[1]], q[2]],[]
    outs: [q[0], q[2]], []
          [q[1], q[2]], []
    ```

    The general broadcasting rules are:

    > *   If len(qargs) == 1:
    >
    >     ```python
    >     [q[0], q[1]] -> [q[0]],[q[1]]
    >     ```
    >
    > *   If len(qargs) == 2:
    >
    >     ```python
    >     [[q[0], q[1]], [r[0], r[1]]] -> [q[0], r[0]], [q[1], r[1]]
    >     [[q[0]], [r[0], r[1]]]       -> [q[0], r[0]], [q[0], r[1]]
    >     [[q[0], q[1]], [r[0]]]       -> [q[0], r[0]], [q[1], r[0]]
    >     ```
    >
    > *   If len(qargs) >= 3:
    >
    >     ```python
    >     [q[0], q[1]], [r[0], r[1]],  ...] -> [q[0], r[0], ...], [q[1], r[1], ...]
    >     ```

    **Parameters**

    *   **qargs** (`List`) – List of quantum bit arguments.
    *   **cargs** (`List`) – List of classical bit arguments.

    **Return type**

    `Tuple`\[`List`, `List`]

    **Returns**

    A tuple with single arguments.

    **Raises**

    **CircuitError** – If the input is not valid. For example, the number of arguments does not match the gate expectation.
  </Function>

  <span id="cxgate-c-if" />

  ### c\_if

  <Function id="qiskit.circuit.library.CXGate.c_if" signature="CXGate.c_if(classical, val)">
    Add classical condition on register classical and value val.
  </Function>

  <span id="cxgate-control" />

  ### control

  <Function id="qiskit.circuit.library.CXGate.control" signature="CXGate.control(num_ctrl_qubits=1, label=None, ctrl_state=None)">
    Return a controlled-X gate with more control lines.

    **Parameters**

    *   **num\_ctrl\_qubits** (*int*) – number of control qubits.
    *   **label** (*str or None*) – An optional label for the gate \[Default: None]
    *   **ctrl\_state** (*int or str or None*) – control state expressed as integer, string (e.g. ‘110’), or None. If None, use all 1s.

    **Returns**

    controlled version of this gate.

    **Return type**

    [ControlledGate](qiskit.circuit.ControlledGate "qiskit.circuit.ControlledGate")
  </Function>

  <span id="cxgate-copy" />

  ### copy

  <Function id="qiskit.circuit.library.CXGate.copy" signature="CXGate.copy(name=None)">
    Copy of the instruction.

    **Parameters**

    **name** (*str*) – name to be given to the copied circuit, if None then the name stays the same.

    **Returns**

    **a copy of the current instruction, with the name**

    updated if it was provided

    **Return type**

    [qiskit.circuit.Instruction](qiskit.circuit.Instruction "qiskit.circuit.Instruction")
  </Function>

  <span id="cxgate-inverse" />

  ### inverse

  <Function id="qiskit.circuit.library.CXGate.inverse" signature="CXGate.inverse()">
    Return inverted CX gate (itself).
  </Function>

  <span id="cxgate-is-parameterized" />

  ### is\_parameterized

  <Function id="qiskit.circuit.library.CXGate.is_parameterized" signature="CXGate.is_parameterized()">
    Return True .IFF. instruction is parameterized else False
  </Function>

  <span id="cxgate-mirror" />

  ### mirror

  <Function id="qiskit.circuit.library.CXGate.mirror" signature="CXGate.mirror()">
    For a composite instruction, reverse the order of sub-gates.

    This is done by recursively mirroring all sub-instructions. It does not invert any gate.

    **Returns**

    a fresh gate with sub-gates reversed

    **Return type**

    [qiskit.circuit.Instruction](qiskit.circuit.Instruction "qiskit.circuit.Instruction")
  </Function>

  <span id="cxgate-power" />

  ### power

  <Function id="qiskit.circuit.library.CXGate.power" signature="CXGate.power(exponent)">
    Creates a unitary gate as gate^exponent.

    **Parameters**

    **exponent** (*float*) – Gate^exponent

    **Returns**

    To which to\_matrix is self.to\_matrix^exponent.

    **Return type**

    [qiskit.extensions.UnitaryGate](qiskit.extensions.UnitaryGate "qiskit.extensions.UnitaryGate")

    **Raises**

    **CircuitError** – If Gate is not unitary
  </Function>

  <span id="cxgate-qasm" />

  ### qasm

  <Function id="qiskit.circuit.library.CXGate.qasm" signature="CXGate.qasm()">
    Return a default OpenQASM string for the instruction.

    Derived instructions may override this to print in a different format (e.g. measure q\[0] -> c\[0];).
  </Function>

  <span id="cxgate-repeat" />

  ### repeat

  <Function id="qiskit.circuit.library.CXGate.repeat" signature="CXGate.repeat(n)">
    Creates an instruction with gate repeated n amount of times.

    **Parameters**

    **n** (*int*) – Number of times to repeat the instruction

    **Returns**

    Containing the definition.

    **Return type**

    [qiskit.circuit.Instruction](qiskit.circuit.Instruction "qiskit.circuit.Instruction")

    **Raises**

    **CircuitError** – If n \< 1.
  </Function>

  <span id="cxgate-to-matrix" />

  ### to\_matrix

  <Function id="qiskit.circuit.library.CXGate.to_matrix" signature="CXGate.to_matrix()">
    Return a numpy.array for the CX gate.
  </Function>
</Class>

